--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -14,7 +14,11 @@
     <div class="recipe-author">
         <span class="recipe-author-item">
             <i class="fas fa-user">
-                {{ recipe.author.first_name }} {{ recipe.author.last_name }}
+                {% if recipe.author.first_name %}
+                    {{ recipe.author.first_name }} {{ recipe.author.last_name }}
+                {% else %}
+                    {{recipe.author.username}}
+                {% endif %}
             </i>
         </span>
         <span class="recipe-author-item">
@@ -23,7 +27,7 @@
             </i>
         </span>
         <span class="recipe-author-item">
-            <a href="/recipes/category/cafe-da-manha">
+            <a href="{% url "recipes:category" recipe.category.id %}">
                 <i class="fas fa-layer-group"></i>
                 <span>{{ recipe.category.name }}</span>
             </a>
