--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -13,13 +13,19 @@
     </div>
     <div class="recipe-author">
         <span class="recipe-author-item">
-            <i class="fas fa-user">
-                {% if recipe.author.first_name %}
-                    {{ recipe.author.first_name }} {{ recipe.author.last_name }}
-                {% else %}
-                    {{recipe.author.username}}
-                {% endif %}
-            </i>
+            
+            
+                <i class="fas fa-user">
+                    {% if recipe.author is not None %}
+                        {% if recipe.author.first_name %}
+                            {{ recipe.author.first_name }} {{ recipe.author.last_name }}
+                        {% else %}
+                            {{recipe.author.username}}
+                        {% endif %}
+                    {% else %}
+                        Desconhecido
+                    {% endif %}
+                </i>        
         </span>
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt">
