--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -4,6 +4,8 @@
     <div class="main-content main-content-list container">
         {% for recipe in recipes %}
             {% include "recipes/partials/recipe.html" %}
+        {% empty %}
+            <h1>No recipes founds😪</h1>
         {% endfor %}
         
     </div>
