--- a/authors/templates/authors/pages/register_view.html
+++ b/authors/templates/authors/pages/register_view.html
@@ -1,1 +1,34 @@
-olá mundo
+{% extends "global/base.html" %}
+
+{% block content %}
+
+  <div class="main-content center container">
+    <h1>register</h1>
+  </div>
+
+  <div class="main-content container">
+    <form action="" method='POST'>
+      <div class="form-content form-content-grid">
+        {% for field in form %}
+          <div class="form-group">
+            <label for="{{ field.id_for_label }}">
+              {{ field.label}}
+            </label>
+            {{ field }}
+            {% if field.help_text %}
+              <p class="help-text">
+                {{ field.help_text }}
+              </p>
+            {% endif %}
+
+            {{ field.errors }}
+          </div>
+          
+        {% endfor %}
+      </div>
+      <div class="form-group">
+        <button type="submit">send</button>
+      </div>
+    </form>
+  </div>
+{% endblock content %}
