--- a/authors/templates/authors/pages/register_view.html
+++ b/authors/templates/authors/pages/register_view.html
@@ -7,7 +7,8 @@
   </div>
 
   <div class="main-content container">
-    <form action="" method='POST'>
+    <form action=" {% url "authors:create" %} " method='POST'>
+      {% csrf_token %}
       <div class="form-content form-content-grid">
         {% for field in form %}
           <div class="form-group">
@@ -26,8 +27,11 @@
           
         {% endfor %}
       </div>
-      <div class="form-group">
-        <button type="submit">send</button>
+
+      <div class="form-content form-content-grid">
+        <div class="form-group">
+          <button type="submit">Send</button>
+        </div>
       </div>
     </form>
   </div>
